<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LOL Jigsaw</string>
    <string name="game_info">Game Information</string>
    <string name="level_up">Level Up! Try next level!</string>
    <string name="game_over">Game Over!</string>
    <string name="go">OK</string>
    <string name="restart">Restart</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="level">Level</string>
    <string name="step">Step</string>
    <string name="Time">Time</string>
    <string name="action_settings">Settings</string>

    <string name="select_game">Config Game</string>
    <string name="selected_hero">SelectedIndex</string>
    <string name="selected_piece">SelectedPiece</string>
    <string name="start_game">Start Game</string>

    <string name="classic_style">Classic Photo</string>
    <string name="cute_style">Cute Photo</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="nightmare">Nightmare</string>

    <string name="top_level">Congratulations!You have passed the hardest level of this hero, try another one?</string>
    <string name="contact_me">About</string>
    <string name="contact_me_info">Please contact me via dongyuxi2004@163.com</string>

    <string name="wall_ad">Getting Free Points</string>
    <string name="insert_ad">Getting Surprise Here</string>

    <string name="show_wall_ad">Show Points Wall</string>
    <string name="quit_wall_ad">Quit Points Wall</string>
</resources>
