<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <com.orange.jigsaw.view.ImageLayout
        android:id="@+id/jigsawLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="3dp"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/jigsawLayout"
        android:layout_margin="3dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/stepText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/step"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Time"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/level"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:padding="4dp"
            android:layout_below="@id/levelText"
            android:background="@drawable/field_circle"
            android:text="1"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/step"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:padding="4dp"
            android:layout_below="@id/stepText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/field_circle"
            android:text="0"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:padding="4dp"
            android:layout_below="@id/timeText"
            android:layout_alignParentRight="true"
            android:background="@drawable/field_circle"
            android:text="60"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jigsawLayout">
        <Button
            android:id="@+id/pauseResumeButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pause"
            android:textSize="12sp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/restart"
            android:textSize="12sp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="12sp"
            android:singleLine="true"/>
        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="12sp"
            android:singleLine="true"/>
    </LinearLayout>

</RelativeLayout>
